# turnTable

./: .gitignore  BARCODE-SCANNER.md  CHANGELOG.md  CurrentVersion.json  DISCLAIMER.md  Makefile  README.md  RELEASE.md  SCANNER.md  barcode-scanner.html  package.json  scripts
.cursor/rules/: releases-include-apk.mdc  releases-include-mobile-apps.mdc
.github/actions/node24-marker/: action.yml  main.js  pre.js
.github/workflows/: android.yml  compile.yml  ios.yml  update-current-version.yml
android/: .gitignore  REDACTED_FEATURES.md  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro  update-check-latest-version.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/res/color/: redacted_textinput_box_stroke.xml
android/app/src/main/res/drawable/: bg_inbox_row_unread.xml  bg_mail_unread_badge.xml  ic_acorn_seeding.xml  ic_add_plus.xml  ic_bullhorn.xml  ic_cheerleader_horn.xml  ic_edit_pencil.xml  ic_flashlight.xml  ic_home.xml  ic_mail.xml  ic_newspaper.xml  ic_people_friends.xml  ic_push_pin.xml  ic_save_floppy.xml  ic_settings_gear.xml  ic_utorrent_seed.xml  redacted_spinner_popup_background.xml  tracker_status_announcer.xml  tracker_status_http.xml  tracker_status_https.xml  tracker_status_irc.xml  tracker_status_userid.xml  tracker_status_website.xml
android/app/src/main/res/layout/: activity_about.xml  activity_debug_event_log.xml  activity_donation.xml  activity_edit_primary_api_list.xml  activity_edit_search_list.xml  activity_edit_secondary_list.xml  activity_home.xml  activity_main.xml  activity_permission_onboarding.xml  activity_qbittorrent_settings.xml  activity_redacted_add_collage.xml  activity_redacted_artist.xml  activity_redacted_bookmarks.xml  activity_redacted_browse.xml  activity_redacted_browse_results.xml  activity_redacted_collages_search.xml  activity_redacted_detail.xml  (+51 more)
android/scanner/: build.gradle
android/scanner/src/main/: AndroidManifest.xml
android/scanner/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/scripts/: debug-logcat.sh
cpp/: CMakeLists.txt
cpp/include/: barcode_scanner.h
cpp/src/: barcode_scanner.cpp
docs/: browser-store-ids.md  qbittorrent-api-future.md  requirements-qbittorrent.txt
ios/: BUILD.md  ios.toolchain.cmake
ios/BarcodeScanner/: BarcodeScanner-Bridging-Header.h  Info.plist  ViewController.swift
ios/BarcodeScanner.xcodeproj/: project.pbxproj
ios/scripts/: build_lib.sh  sync_app_icon_from_android.sh
ios/turnTable/: AboutViewController.swift  AppDelegate.swift  AppNavigation.swift  DonationViewController.swift  HomeViewController.swift  Info.plist  IosSecondaryBrowser.swift  OnboardingViewController.swift  RedactedAccountViewController.swift  RedactedApiClient.swift  RedactedBrowseParamsCodec.swift  RedactedBrowseViewController.swift  RedactedCollagesScreens.swift  RedactedJsonLoaderViewController.swift  RedactedModels.swift  RedactedMoreViewController.swift  RedactedTorrentGroupViewController.swift  ScannerViewController.swift  SearchHistoryStore.swift  SearchHistoryViewController.swift  SearchPrefs.swift  SearchViewController.swift  SettingsViewController.swift  SplashViewController.swift  TurnTableGithubUpdate.swift  TurnTableSearchDeepLink.swift  TurnTableUpdateCoordinator.swift  turnTable-Bridging-Header.h  turnTable.entitlements
ios/turnTable.xcodeproj/: project.pbxproj
ios/turnTable.xcodeproj/xcshareddata/xcschemes/: turnTable.xcscheme  turnTableScanner.xcscheme
ios/turnTable/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/turnTable/Base.lproj/: LaunchScreen.storyboard
ios/turnTableScanner/: AppDelegate.swift  CompanionScannerViewController.swift  Info.plist  ScannerRedactedAssist.swift
scripts/: release-github.sh
(+148 files in other folders)
